Added Where To module

--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,10 @@
         Directory
     </div>
     <div>
-        <a href="Js-Introduction/Intro.html"> Js-Introduction</a>
+        <a href="Js-Introduction/Intro.html">Js-Introduction</a>
+
+        <br />
+
+        <a href="Js-WhereTo/WhereTo.html">Js-WhereTo</a>
     </div>
 </body>
