--- a/Index.html
+++ b/Index.html
@@ -11,5 +11,9 @@
         <br />
 
         <a href="Js-WhereTo/WhereTo.html">Js-WhereTo</a>
+
+        <br />
+
+        <a href="Js-Output/output.html">Js-Ouput</a>
     </div>
 </body>
