--- a/Index.html
+++ b/Index.html
@@ -17,3 +17,7 @@
         <a href="Js-Output/output.html">Js-Ouput</a>
     </div>
 </body>
+
+<footer>
+    <a href='https://www.w3schools.com/js/default.asp'>w3schools</a>
+</footer>
